--- a/src/CheatMath/app/src/main/res/layout/activity_display_vol_cubo.xml
+++ b/src/CheatMath/app/src/main/res/layout/activity_display_vol_cubo.xml
@@ -10,27 +10,6 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="engsoft.cheatmath.DisplayVolCubo">
 
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="15dp"
-        android:id="@+id/editAresta"
-        android:hint="Aresta"
-        android:background="@drawable/back"/>
-
-    <Button
-        android:text="@string/calculate"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/editAresta"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="12dp"
-        android:id="@+id/button6"
-        android:onClick="calculate"/>
-
     <TextView
         android:text=""
         android:layout_width="wrap_content"
@@ -39,5 +18,56 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="31dp"
         android:id="@+id/textResultado" />
+
+    <Button
+        android:text="Favorite"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/button7"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:onClick="favorite"/>
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:layout_marginTop="65dp"
+        android:id="@+id/editAresta"
+        android:hint="Aresta"
+        android:inputType="number"
+        android:background="@drawable/back"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
+
+    <Button
+        android:text="@string/calculate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="36dp"
+        android:id="@+id/button6"
+        android:onClick="calculate"
+        android:layout_below="@+id/editAresta"
+        android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:text="Volume Cubo"
+        android:textSize="30dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView"
+        android:layout_alignParentTop="true"
+        android:layout_toLeftOf="@+id/button7"
+        android:layout_toStartOf="@+id/button7" />
+
+    <TextView
+        android:text=""
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textSolucao"
+        android:layout_marginBottom="57dp"
+        android:layout_above="@+id/button7"
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
