ultimas modificacoes + apresentacao

--- a/src/CheatMath/app/src/main/res/layout/activity_main.xml
+++ b/src/CheatMath/app/src/main/res/layout/activity_main.xml
@@ -45,4 +45,28 @@
         android:layout_alignRight="@+id/button1"
         android:layout_alignEnd="@+id/button1" />
 
+    <Button
+        android:text="Favoritos"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="19dp"
+        android:id="@+id/button8"
+        android:layout_alignLeft="@+id/button3"
+        android:layout_alignStart="@+id/button3"
+        android:layout_alignRight="@+id/button3"
+        android:layout_alignEnd="@+id/button3" />
+
+    <Button
+        android:text="Historico"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/button8"
+        android:layout_marginBottom="14dp"
+        android:id="@+id/button9"
+        android:layout_alignLeft="@+id/button8"
+        android:layout_alignStart="@+id/button8"
+        android:layout_alignRight="@+id/button8"
+        android:layout_alignEnd="@+id/button8" />
+
 </RelativeLayout>
